<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminIdeaFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/newIdeaTipoConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/adminIdeaFragToolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorSecondary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:title="@string/add_idea" />

        <TextView
            android:id="@+id/adminIdeaFragHorarioLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Horario"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/adminIdeaFragToolbar" />

        <Spinner
            android:id="@+id/adminIdeaFragHorarioInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/adminIdeaFragHorarioLabel" />

        <TextView
            android:id="@+id/adminIdeaFragNombreLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/adminIdeaFragHorarioInput" />

        <AutoCompleteTextView
            android:id="@+id/adminIdeaFragNombreInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:completionThreshold="1"
            android:ems="10"
            android:hint="@string/optional"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/adminIdeaFragNombreLabel" />

        <TextView
            android:id="@+id/adminIdeaFragDescripcionLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/adminIdeaFragNombreInput" />

        <EditText
            android:id="@+id/adminIdeaFragDescripcionInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/optional"
            android:inputType="textMultiLine"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/adminIdeaFragDescripcionLabel" />

        <TextView
            android:id="@+id/adminIdeaFragAlimentoLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/food"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/adminIdeaFragDescripcionInput" />

        <AutoCompleteTextView
            android:id="@+id/adminIdeaFragAlimentoNombreInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:completionThreshold="1"
            android:ems="10"
            android:hint="@string/add_food"
            android:imeOptions="actionDone"
            app:layout_constraintEnd_toStartOf="@+id/adminIdeaFragAddAlimentoBtn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/adminIdeaFragAlimentoLabel" />

        <Button
            android:id="@+id/adminIdeaFragAddAlimentoBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/adminIdeaFragAlimentoNombreInput"
            app:layout_constraintTop_toBottomOf="@+id/adminIdeaFragAlimentoLabel" />

        <TextView
            android:id="@+id/adminIdeaFragAlimentosLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Alimentos"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/adminIdeaFragAlimentoNombreInput" />


        <LinearLayout
            android:id="@+id/adminIdeaFragAlimentosLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/adminIdeaFragAlimentosLabel">
            <TextView
                android:id="@+id/adminIdeaFragAlimentosError"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:textColor="@color/red_200"
                android:visibility="gone"
                android:text="@string/emptyFoodListError"/>
        </LinearLayout>

        <Button
            android:id="@+id/adminIdeaFragAddBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/save"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/adminIdeaFragAlimentosLayout" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ProgressBar
        android:id="@+id/adminIdeaFragProgressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" />
</RelativeLayout>